SERVER-15968: Fix snapshot1.js for WT & Windows